# 2025.2-Math-Modeling

./: .gitignore  README.md  main.py  model.py  plot_figures.py  pyproject.toml  utils.py
output/: exp1.csv  exp1_config.json  exp2.csv  exp2_comparison_vs_snapshot.csv  exp2_config.json  exp2_new_summary.csv  exp2_remote0_b056_vs_old_exp1_b056.csv  exp3.csv  exp3_config.json
tests/: test_model.py
